apps/staging/jellyfin/zap2xml-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zap2xml
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zap2xml
  template:
    metadata:
      labels:
        app: zap2xml
    spec:
      containers:
        - name: zap2xml
          image: ghcr.io/jef/zap2xml:latest
          volumeMounts:
            - name: epg
              mountPath: /epg
      volumes:
        - name: epg
          persistentVolumeClaim:
            claimName: zap2xml-epg
